# hawiya-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  API_SPEC.md  BUILD_PLAN.md  CLAUDE.md  Makefile  README.md  alembic.ini  demo-ui.md  multi-tenancy.md  pyproject.toml
apps/demo-ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/demo-ui/src/: App.tsx  api.ts  index.css  main.tsx  mrz.ts  scenarios.ts
apps/demo-ui/src/components/: CapturePanel.tsx  ExtractionPanel.tsx  Footer.tsx  Header.tsx  ResolutionPanel.tsx  ResponsePanel.tsx
deploy/: .dockerignore  Dockerfile  docker-compose.yml
deploy/air-gap/: README.md  build.sh  install.sh
deploy/helm/hawiya-ai/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/hawiya-ai/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/observability/: prometheus.yml  tempo.yaml
deploy/observability/grafana/: dashboards-provider.yml  datasources.yml
deploy/observability/grafana/dashboards/: service-health.json
deploy/tessdata/: mrz.traineddata
docs/deployment/: kubernetes.md
postman/: README.md  hawiya-ai-dev.postman_environment.json  hawiya-ai-wizsm.postman_collection.json
scripts/: benchmark_extraction.py  demo_flow.py  generate_passport_image.py  load_test.py  reset_demo_session.py  seed_demo_persons.py  seed_dev_tenant.py  smoke_test.py
src/hawiya/: __init__.py  config.py  main.py
src/hawiya/api/: dependencies.py  documents.py  errors.py  health.py  identity.py  persons.py
src/hawiya/audit/: __init__.py  writer.py
src/hawiya/db/: session.py
src/hawiya/db/migrations/: env.py
src/hawiya/db/migrations/versions/: 0001_initial_tenancy_and_audit.py  0002_document_extractions.py  0003_persons_and_matching.py
src/hawiya/db/repositories/: __init__.py  person_identifier_repository.py  person_repository.py
src/hawiya/extractors/: __init__.py  document_classifier.py  mrz.py  ocr.py  types.py  validators.py
src/hawiya/matching/: __init__.py  arabic_names.py  deterministic.py  types.py
src/hawiya/models/: __init__.py  audit.py  base.py  document_extraction.py  match_decision.py  person.py  person_identifier.py  person_name_variant.py  tenant.py
src/hawiya/observability/: logger.py  metrics.py  tracing.py
src/hawiya/security/: pii.py
src/hawiya/services/: __init__.py  base.py  extraction_service.py  identity_service.py  person_service.py
src/hawiya/tenancy/: __init__.py  context.py  idempotency.py  middleware.py  rate_limit.py
tests/: conftest.py
tests/multi_tenant/: test_audit_isolation.py
tests/unit/: test_arabic_names.py  test_deterministic_matcher.py  test_document_classifier.py  test_documents_endpoint.py  test_extraction_service.py  test_health.py  test_idempotency.py  test_identity_endpoint.py  test_identity_service.py  test_mrz.py  test_persons_endpoint.py  test_pii.py  test_rate_limit.py  test_validators.py
