[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawiya-ai"
version = "0.1.0"
description = "Hawiya AI — sovereign, on-premise identity intelligence platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
readme = "README.md"
authors = [{ name = "Hawiya AI" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "structlog>=24.4",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "pre-commit>=4.0",
    "types-python-dateutil",
]
ocr = [
    # PassportEye + Tesseract per CLAUDE.md §3. Tesseract itself is a
    # system binary — install separately on each target OS.
    "passporteye>=2.2",
    "Pillow>=10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hawiya"]

[tool.hatch.build.targets.wheel.force-include]
"src/hawiya/db/migrations/script.py.mako" = "hawiya/db/migrations/script.py.mako"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "S",              # bandit
    "T20",            # flake8-print  (forbid print)
    "RET",            # return
    "SIM",            # simplify
    "ARG",            # unused args
    "PL",             # pylint subset
    "RUF",
]
# TCH (TC001/TC002/TC003) is intentionally not selected — every module uses
# `from __future__ import annotations`, so moving runtime-needed types
# (Pydantic / SQLAlchemy / FastAPI Depends) into TYPE_CHECKING blocks
# breaks resolution. The rule fires too often as a false positive.
ignore = [
    "PLR0913",  # too many arguments — services often need many
    "S101",     # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "ARG"]
"src/hawiya/db/migrations/**" = ["E501", "N999"]
# CLI scripts: print is the user-facing output channel; complexity
# limits don't help readability of one-shot tools.
"scripts/**" = ["T201", "PLR0912", "PLR0915", "PLR2004", "SIM117", "E501"]
# FastAPI's standard pattern uses Depends/File/Form in argument defaults.
"src/hawiya/api/**" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/hawiya"]
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
exclude = ["src/hawiya/db/migrations/.*"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "alembic.*", "passporteye.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "tenancy: multi-tenant isolation tests (CI gate)",
    "integration: requires Postgres",
]

[tool.alembic]
script_location = "src/hawiya/db/migrations"
