[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawiya-ai"
version = "0.1.0"
description = "Hawiya AI — sovereign, on-premise identity intelligence platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
readme = "README.md"
authors = [{ name = "Hawiya AI" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    "structlog>=24.4",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    # Observability — Week 4 hardening.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "prometheus-client>=0.21",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "pre-commit>=4.0",
    "types-python-dateutil",
    # Security scans — week 4. Bandit duplicates ruff's S rules but ships
    # newer signature checks and is the customer/auditor-recognised name.
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
ocr = [
    # PassportEye + Tesseract per CLAUDE.md §3. Tesseract itself is a
    # system binary — install separately on each target OS.
    "passporteye>=2.2",
    "Pillow>=10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hawiya"]

[tool.hatch.build.targets.wheel.force-include]
"src/hawiya/db/migrations/script.py.mako" = "hawiya/db/migrations/script.py.mako"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "N",              # pep8-naming
    "S",              # bandit
    "T20",            # flake8-print  (forbid print)
    "RET",            # return
    "SIM",            # simplify
    "ARG",            # unused args
    "PL",             # pylint subset
    "RUF",
]
# TCH (TC001/TC002/TC003) is intentionally not selected — every module uses
# `from __future__ import annotations`, so moving runtime-needed types
# (Pydantic / SQLAlchemy / FastAPI Depends) into TYPE_CHECKING blocks
# breaks resolution. The rule fires too often as a false positive.
ignore = [
    "PLR0913",  # too many arguments — services often need many
    "S101",     # asserts in tests are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004", "ARG", "PLC0415", "N805"]
"src/hawiya/db/migrations/**" = ["E501", "N999"]
# CLI scripts: print is the user-facing output channel; complexity
# limits don't help readability of one-shot tools.
"scripts/**" = ["T201", "PLR0912", "PLR0915", "PLR2004", "SIM117", "E501"]
# FastAPI's standard pattern uses Depends/File/Form in argument defaults.
"src/hawiya/api/**" = ["B008"]
# This module deliberately contains Arabic letters in strings, comments,
# and translation maps; ruff's "ambiguous character" rule can't distinguish
# intentional from accidental and would fire on every line.
"src/hawiya/matching/arabic_names.py" = ["RUF001", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/hawiya"]
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false
exclude = ["src/hawiya/db/migrations/.*"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "alembic.*", "passporteye.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "tenancy: multi-tenant isolation tests (CI gate)",
    "integration: requires Postgres",
]

[tool.alembic]
script_location = "src/hawiya/db/migrations"

[tool.bandit]
# Bandit is a security linter; ruff's `S` rules cover the same surface but
# bandit is the customer/auditor-recognised tool. Run it via `make security`.
exclude_dirs = ["tests", ".venv", "build", "dist"]
# B101 = use of assert. Asserts only run outside tests, where they're rare.
# B608 = SQL string interpolation. We use SQLAlchemy parameterisation; the
#        only raw SQL is in Alembic migrations and uses ``op.execute`` with
#        constants, so the rule fires false positives.
skips = ["B101", "B608"]
